# home_web

./: Cargo.toml  LICENSE  home_web.service
src/: main.rs  service_discovery.rs
templates/: base.html  index.html  service.html  services.html
templates/services/: base.html  rgbw.html  shcnt.html
